study: homework - 4(기능구현 완료)